Fixed layout bug

--- a/src/components/AboutUsBox/styles/style.css
+++ b/src/components/AboutUsBox/styles/style.css
@@ -3,22 +3,6 @@
   width: 100%;
 }
 
-.presentationImageContainer {
-  height: 200px;
-}
-
-.presentationImage {
-  border-radius: 50%;
-  min-width: 150px;  
-  min-height: 150px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  margin: auto;
-  box-shadow: 0px 0px 30px #333;
-  border: 2px solid #fff;
-}
-
 .nameText {
   font-family: 'Fugaz One';
   color: #fff;
@@ -46,11 +30,13 @@
 
 .skillsList {
   padding: 0;
+  width: 100%;
 }
+
 .skillItem {
   width: 100%;
   list-style-type: none;
-  float: left;
+  display: inline-block;
   padding: 0;
   margin: 0;
 }
